@@ -1,3 +1,10 @@
+2007-08-14  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclBasic.c:	Use fully qualified variable names for
+	* tests/thread.test:	::errorInfo and ::errorCode so that string
+	* tests/trace.test:	reported to variable traces are fully
+	qualified in agreement with Tcl 8.4 operations.
+
 2007-08-14  Daniel Steffen  <das@users.sourceforge.net>
 
 	* unix/tclLoadDyld.c: use dlfcn API on Mac OS X 10.4 and later; fix
